# Arduino

Piante/Arduino_wifi/AP_SimpleWebServer_led_onoff/: AP_SimpleWebServer_led_onoff.ino  arduino_secrets.h
Piante/Arduino_wifi/definitivo/: definitivo.ino
Piante/Arduino_wifi/prova_schermo/: prova_schermo.ino
Piante/Arduino_wifi/sensore_umidità/: dati-20-07-2020.txt
Piante/c++/: Makefile.win  acquisSerial.cpp  acquisizioni.dev
Piante/esperimenti_acqua/: spe-10-acc-1.txt
Piante/prigetto_piante/prog_piante_nuovo/: prog_piante_nuovo.ino
Piante/prigetto_piante/prog_tubingen/: prog001.py
Piante/prigetto_piante/prog_tubingen/pianta_tubingen_old_2025/prog_piante_tubi_2025_08_26/: prog_piante_tubi_2025_08_26.ino
Piante/tempOneWire/: tempOneWire.ino
arduino_driver/: arduino_driver.ino  arduino_python.py  pyproject.toml  upload_script.py
piante/progetto_piante/arduino_driver/: arduino_driver.ino  arduino_python.py  upload_script.py
piante/progetto_piante/old/: prigetto_piante.ino
piante/progetto_piante/prog_tubingen/: prog001.py
piante/progetto_piante/prova_sens_dist/: distance_python.py  prova_sens_dist.ino  upload_script.py
